nginx/src/v2_k8s/002-nginx-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minikube-nginx-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: minikube-nginx
  ports:
    - port: 80
      targetPort: 80
